--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <!--<script src="http://192.168.1.104:8080/target/target-script-min.js#zoei"></script>-->
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="js/headroom.min.js"></script>
     <script type="text/javascript" src="js/hammer.js"></script>
     <script type="text/javascript" src="js/iscroll.js"></script>
     <script type="text/javascript" src="js/angular.js"></script>
