--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="lib/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap.js"></script>
     <script type="text/javascript" src="lib/require.js" data-main="js/main"></script>
+    <script type="text/javascript" src="lib/iscroll.js"></script>
     <script type="text/javascript">
         require.config({
           baseUrl: './js',
