--- a/www/index_product.html
+++ b/www/index_product.html
@@ -14,7 +14,7 @@
 <body>
 	<div ng-view class="wrap content container"></div>
 
-    <script type="text/javascript" src="lib/deps.min.js"></script>
-    <script type="text/javascript" src="lib/require.js" data-main="js/main"></script>
+    <script type="text/javascript" src="js/deps.min.js"></script>
+    <script type="text/javascript" src="js/require.js" data-main="js/main"></script>
 </body>
 </html>
