--- a/www/index.html
+++ b/www/index.html
@@ -16,13 +16,12 @@
 
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/class.js"></script>
+    <script type="text/javascript" src="js/hammer.js"></script>
     <script type="text/javascript" src="js/iscroll.js"></script>
-    <script type="text/javascript" src="js/namespace.js"></script>
     <script type="text/javascript" src="js/angular.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
     <script type="text/javascript" src="js/angular-resource.js"></script>
-    <script type="text/javascript" src="js/gestures.js"></script>
+    <script type="text/javascript" src="js/angular-hammer.js"></script>
     <script type="text/javascript" src="js/require.js" data-main="js/main"></script>
 </body>
 </html>
