--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
 <body>
 	<div ng-view class="wrap content container"></div>
 
+    <!--<script src="http://192.168.1.104:8080/target/target-script-min.js#zoei"></script>-->
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/hammer.js"></script>
