--- a/www/index.html
+++ b/www/index.html
@@ -12,9 +12,10 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body>
-	<div ng-view class="wrap content container"></div>
+    <container>
+        <div ng-view class="wrap"></div>
+    </container>
 
-    <!--<script src="http://192.168.1.104:8080/target/target-script-min.js#zoei"></script>-->
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
     <script type="text/javascript" src="js/headroom.min.js"></script>
