--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,17 @@
     <meta name="Author" content="024">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <link rel="stylesheet" type="text/css" href="css/ratchet.css">
+
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
-<body>
-    <container>
-        <div ng-view class="wrap"></div>
-    </container>
+<body ng-controller="App.controller.AppCtrl">
+    <main-view class="wrap">
+        <div ng-view></div>
+    </main-view>
 
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.js"></script>
@@ -25,6 +29,7 @@
     <script type="text/javascript" src="js/angular-route.js"></script>
     <script type="text/javascript" src="js/angular-resource.js"></script>
     <script type="text/javascript" src="js/angular-hammer.js"></script>
+    <script type="text/javascript" src="js/ratchet.js"></script>
     <script type="text/javascript" src="js/require.js" data-main="js/main"></script>
 </body>
 </html>
