--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
 </head>
 <body ng-controller="App.controller.AppCtrl">
     <main-view class="wrap">
-        <div ng-view></div>
+        <div ng-view class="content"></div>
     </main-view>
 
     <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
