--- a/www/index.html
+++ b/www/index.html
@@ -8,28 +8,24 @@
     <meta name="Author" content="024">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 
-    <!-- <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"> -->
-    <link rel="stylesheet" type="text/css" href="css/ratchet.css">
-
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body ng-controller="App.controller.AppCtrl">
-    <main-view class="wrap">
+    <main-view>
         <div ng-view class="content" style="padding-top:40px"></div>
     </main-view>
 
-    <script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
-    <script type="text/javascript" src="js/headroom.min.js"></script>
-    <script type="text/javascript" src="js/hammer.js"></script>
-    <script type="text/javascript" src="js/iscroll.js"></script>
-    <script type="text/javascript" src="js/angular.js"></script>
-    <script type="text/javascript" src="js/angular-route.js"></script>
-    <script type="text/javascript" src="js/angular-resource.js"></script>
-    <script type="text/javascript" src="js/angular-hammer.js"></script>
-    <!--<script type="text/javascript" src="js/ratchet.js"></script>-->
-    <script type="text/javascript" src="js/require.js" data-main="js/main"></script>
+    <script type="text/javascript" src="lib/jquery-2.0.3.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap.js"></script>
+    <script type="text/javascript" src="lib/headroom.min.js"></script>
+    <script type="text/javascript" src="lib/hammer.js"></script>
+    <script type="text/javascript" src="lib/iscroll.js"></script>
+    <script type="text/javascript" src="lib/angular.js"></script>
+    <script type="text/javascript" src="lib/angular-route.js"></script>
+    <script type="text/javascript" src="lib/angular-resource.js"></script>
+    <script type="text/javascript" src="lib/angular-hammer.js"></script>
+    <!--<script type="text/javascript" src="lib/ratchet.js"></script>-->
+    <script type="text/javascript" src="lib/require.js" data-main="js/main"></script>
 </body>
 </html>
