--- a/www/index_product.html
+++ b/www/index_product.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
-<body ng-controller="AppCtrl">
+<body ng-controller="App.controller.AppCtrl">
     <main-view>
-        <div ng-view class="wrap"></div>
+        <div ng-view></div>
     </main-view>
 
     <script type="text/javascript" src="js/deps.min.js"></script>
