--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
 </head>
 <body ng-controller="App.controller.AppCtrl">
     <main-view>
