--- a/www/index_product.html
+++ b/www/index_product.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>--</title>
-    <meta name="keywords" content="--" />
-    <meta name="description" content="--"/>
+    <title>Grapes</title>
+    <meta name="keywords" content="Grapes" />
+    <meta name="description" content="Grapes"/>
     <meta name="Author" content="024">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
 </head>
 <body ng-controller="App.controller.AppCtrl">
